--- a/style.css
+++ b/style.css
@@ -52,3 +52,10 @@ button:hover{
   background-color: rgb(207, 217, 237);
   transition: 0.3s;
 }
+
+.operator{
+  background-color:rgb(197, 222, 244);
+}
+#equal{
+  background-color:rgb(157, 154, 240);
+}
